--- a/app.config
+++ b/app.config
@@ -29,7 +29,7 @@
                 <value />
             </setting>
             <setting name="RSS_Report_Retrievers_RSS_ReportingService" serializeAs="String">
-                <value />
+                <value>http://localhost/ReportServer/ReportService.asmx</value>
             </setting>
         </RSS_Report_Retrievers.Properties.Settings>
     </userSettings>
