--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -27,7 +27,7 @@
       <Value Profile="(Default)">http://localhost/ReportServer/ReportService2005.asmx</Value>
     </Setting>
     <Setting Name="RSS_Report_Retrievers_RSS_ReportingService" Type="(Web Service URL)" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">http://localhost/ReportServer/ReportService.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
