--- a/RSS Report Retriever.csproj
+++ b/RSS Report Retriever.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ServerRegistry.cs" />
     <Compile Include="Forms\About.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +83,12 @@
     </Compile>
     <Compile Include="Forms\FormGetName.Designer.cs">
       <DependentUpon>FormGetName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormServerSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormServerSettings.Designer.cs">
+      <DependentUpon>FormServerSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormSSRSExplorer.cs">
       <SubType>Form</SubType>
@@ -120,6 +127,10 @@
     <EmbeddedResource Include="Forms\FormGetName.resx">
       <SubType>Designer</SubType>
       <DependentUpon>FormGetName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormServerSettings.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FormServerSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormSSRSExplorer.resx">
       <SubType>Designer</SubType>
