--- a/RSS Report Retriever.csproj
+++ b/RSS Report Retriever.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ConfigurationStorageClasses.cs" />
     <Compile Include="Classes\ServerRegistry.cs" />
     <Compile Include="Forms\About.cs">
       <SubType>Form</SubType>
@@ -84,11 +85,11 @@
     <Compile Include="Forms\FormGetName.Designer.cs">
       <DependentUpon>FormGetName.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormServerSettings.cs">
+    <Compile Include="Forms\FormServers.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormServerSettings.Designer.cs">
-      <DependentUpon>FormServerSettings.cs</DependentUpon>
+    <Compile Include="Forms\FormServers.Designer.cs">
+      <DependentUpon>FormServers.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormSSRSExplorer.cs">
       <SubType>Form</SubType>
@@ -128,9 +129,9 @@
       <SubType>Designer</SubType>
       <DependentUpon>FormGetName.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormServerSettings.resx">
+    <EmbeddedResource Include="Forms\FormServers.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>FormServerSettings.cs</DependentUpon>
+      <DependentUpon>FormServers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormSSRSExplorer.resx">
       <SubType>Designer</SubType>
@@ -159,10 +160,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
+    <None Include="Properties\DataSources\ServerSettingDTO.datasource" />
     <None Include="Web References\RSS\ActiveState.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
@@ -249,12 +247,6 @@
     <None Include="Web References\RSS\Warning.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="Settings.cs" />
     <Compile Include="Web References\RSS\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
