--- a/app.config
+++ b/app.config
@@ -1,48 +1,25 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="RSS_Report_Retrievers.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="RSS_Report_Retrievers.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <RSS_Report_Retrievers.Properties.Settings>
-            <setting name="Username" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Password" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="UseWindowsAuthentication" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="Domain" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="SharePointMode" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ReportLibrary" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="RSS_Report_Retrievers_RSS_ReportingService" serializeAs="String">
-                <value>http://localhost/ReportServer/ReportService.asmx</value>
-            </setting>
-        </RSS_Report_Retrievers.Properties.Settings>
-    </userSettings>
-    <applicationSettings>
-        <RSS_Report_Retrievers.Properties.Settings>
-            <setting name="RSS_Report_Retrievers_RSS_SP_ReportingService2006"
-                serializeAs="String">
-                <value>http://intranet/_vti_bin/ReportServer/ReportService2006.asmx</value>
-            </setting>
-            <setting name="RSS_Report_Retrievers_RSS_2005_ReportingService2005"
-                serializeAs="String">
-                <value>http://localhost/ReportServer/ReportService2005.asmx</value>
-            </setting>
-        </RSS_Report_Retrievers.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="RSS_Report_Retrievers.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="ServerSettings" type="RSS_Report_Retrievers.Classes.ServerSettingsSection, RSS Report Retrievers, Version=1.0.0.0,Culture=neutral,PublicKeyToken=null" />
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <RSS_Report_Retrievers.Properties.Settings>
+      <setting name="RSS_Report_Retrievers_RSS_SP_ReportingService2006"   serializeAs="String">
+        <value>http://intranet/_vti_bin/ReportServer/ReportService2006.asmx</value>
+      </setting>
+      <setting name="RSS_Report_Retrievers_RSS_2005_ReportingService2005"    serializeAs="String">
+        <value>http://localhost/ReportServer/ReportService2005.asmx</value>
+      </setting>
+    </RSS_Report_Retrievers.Properties.Settings>
+    <ServerSettings>
+      <Servers>
+        <add alias="localhost" isSQL2000 ="false" url="http://localhost/ReportServer/ReportService2005.asmx" isSharePointMode="false" reportLibrary="" useWindowsAuth="true" windowsDomain="dom1" windowsUsername="u1" windowsPwd="pwd1" />
+        <add alias="s1" isSQL2000 ="false" url="u1" isSharePointMode="true" reportLibrary="replib1" useWindowsAuth="true" windowsDomain="dom1" windowsUsername="u1" windowsPwd="pwd1" />
+      </Servers>
+    </ServerSettings>
+  </applicationSettings>
 </configuration>
