--- a/RSS Report Retriever.csproj
+++ b/RSS Report Retriever.csproj
@@ -56,12 +56,14 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\ConfigurationStorageClasses.cs" />
+    <Compile Include="Classes\CryptoHelper.cs" />
     <Compile Include="Classes\ServerRegistry.cs" />
     <Compile Include="Forms\About.cs">
       <SubType>Form</SubType>
