--- a/RSS Report Retriever.csproj
+++ b/RSS Report Retriever.csproj
@@ -78,6 +78,12 @@
     </Compile>
     <Compile Include="Classes\Controller.cs" />
     <Compile Include="Classes\IReportingServicesFactory.cs" />
+    <Compile Include="Forms\FormDatasource.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormDatasource.Designer.cs">
+      <DependentUpon>FormDatasource.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormProperties.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,6 +131,10 @@
     <EmbeddedResource Include="Forms\About.resx">
       <SubType>Designer</SubType>
       <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormDatasource.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FormDatasource.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormProperties.resx">
       <SubType>Designer</SubType>
