--- a/RSS Report Retriever.csproj
+++ b/RSS Report Retriever.csproj
@@ -111,6 +111,12 @@
     <Compile Include="Forms\FormServers.Designer.cs">
       <DependentUpon>FormServers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormSetPolicy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormSetPolicy.Designer.cs">
+      <DependentUpon>FormSetPolicy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormSSRSExplorer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,6 +141,7 @@
     <Compile Include="Forms\FormSSRSSItemSelector.Designer.cs">
       <DependentUpon>FormSSRSSItemSelector.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\IFormSetPolicy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\About.resx">
@@ -160,6 +167,10 @@
     <EmbeddedResource Include="Forms\FormServers.resx">
       <SubType>Designer</SubType>
       <DependentUpon>FormServers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormSetPolicy.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FormSetPolicy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormSSRSExplorer.resx">
       <SubType>Designer</SubType>
