--- a/RSS Report Retriever.csproj
+++ b/RSS Report Retriever.csproj
@@ -361,6 +361,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\MessageQueuing.ico" />
+    <Content Include="Resources\model.png" />
     <None Include="Web References\RSS_2005\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
