--- a/app.config
+++ b/app.config
@@ -23,7 +23,7 @@
     </RSS_Report_Retrievers.Properties.Settings>
     <ServerSettings>
       <Servers>
-        <add alias="localhost" isSQL2000="false" url="http://dg-ontw1:8090/ReportServer/ReportService2005.asmx"
+        <add alias="localhost" isSQL2000="false" url="http://localhost/ReportServer_SQL2008/ReportService2005.asmx"
           isSharePointMode="false" reportLibrary="" useWindowsAuth="true"
           windowsDomain="dom1" windowsPwd="pwd1" windowsUsername="u1" />
 		  <add alias="sharepoint" isSQL2000="false" url="http://intranet/_vti_bin/ReportServer/ReportService2006.asmx"
