Added support for the new ReportService2010.asmx endpoint (sql 2008 R2 and sql 2012)

--- a/app.config
+++ b/app.config
@@ -8,14 +8,21 @@
   </configSections>
   <applicationSettings>
     <ReportingServerManager.Properties.Settings>
-      <setting name="RSS_Report_Retrievers_RSS_2005_NATIVE_ReportingService" serializeAs="String">
+      <setting name="RSS_Report_Retrievers_RSS_2005_NATIVE_ReportingService"
+        serializeAs="String">
         <value>http://localhost/ReportServer/ReportService2005.asmx</value>
       </setting>
-      <setting name="RSS_Report_Retrievers_RSS_2000_ReportingService" serializeAs="String">
+      <setting name="RSS_Report_Retrievers_RSS_2000_ReportingService"
+        serializeAs="String">
         <value>http://localhost/ReportServer/ReportService.asmx</value>
       </setting>
-      <setting name="RSS_Report_Retrievers_RSS_2005_SHAREPOINT_ReportingService2006" serializeAs="String">
+      <setting name="RSS_Report_Retrievers_RSS_2005_SHAREPOINT_ReportingService2006"
+        serializeAs="String">
         <value>http://localhost:8080/ReportServer/ReportService2006.asmx</value>
+      </setting>
+      <setting name="ReportingServerManager_RSS_2008R2_ReportingService2010"
+        serializeAs="String">
+        <value>http://dhgwk281:81/ReportServer_SQL2012/ReportService2010.asmx</value>
       </setting>
     </ReportingServerManager.Properties.Settings>
     <ServerSettings>
@@ -24,4 +31,8 @@
       </Servers>
     </ServerSettings>
   </applicationSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><system.serviceModel>
+    <bindings />
+    <client />
+  </system.serviceModel>
+</configuration>
