--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RSS_Report_Retrievers.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ReportingServerManager.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="RSS_Report_Retrievers_RSS_2005_NATIVE_ReportingService" Type="(Web Service URL)" Scope="Application">
@@ -10,6 +10,9 @@
     </Setting>
     <Setting Name="RSS_Report_Retrievers_RSS_2005_SHAREPOINT_ReportingService2006" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost:8080/ReportServer/ReportService2006.asmx</Value>
+    </Setting>
+    <Setting Name="ReportingServerManager_RSS_2008R2_ReportingService2010" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://dhgwk281:81/ReportServer_SQL2012/ReportService2010.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
