Modified folder selector behavior + change icon set + fixed issues downloading multiple folders

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,25 @@
 /src/Logic/RS2008Facade.cs.bak
 /src/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /src/obj/Release
+/src/.vs/ReportingServerManager/v16
+/src/bin
+/src/obj/Debug/TempPE
+*.cache
+*.application
+/src/obj/Debug/ReportingServerManager.csproj.FileListAbsolute.txt
+/src/obj/Debug/ReportingServerManager.Properties.Resources.resources
+/src/obj/Debug/ReportingServerManager.pdb
+/src/obj/Debug/ReportingServerManager.Forms.FormSSRSSItemSelector.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormSSRSExplorer.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormSettings.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormSetPolicy.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormServers.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormProperties.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormGetName.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormDependantItems.resources
+/src/obj/Debug/ReportingServerManager.Forms.FormDatasource.resources
+/src/obj/Debug/ReportingServerManager.Forms.About.resources
+/src/obj/Debug/ReportingServerManager.exe.manifest
+/src/obj/Debug/ReportingServerManager.exe
+/src/ReportingServerManager.UnitTests/bin
+/src/TestResults
