--- a/src/Properties/Settings.settings
+++ b/src/Properties/Settings.settings
@@ -12,7 +12,10 @@
       <Value Profile="(Default)">http://localhost:8080/ReportServer/ReportService2006.asmx</Value>
     </Setting>
     <Setting Name="ReportingServerManager_RSS_2008R2_ReportingService2010" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://dhgwk281:81/ReportServer_SQL2012/ReportService2010.asmx</Value>
+      <Value Profile="(Default)">http://cl-mgmt3:80/ReportServer_MSSQL2014/ReportService2010.asmx</Value>
+    </Setting>
+    <Setting Name="LastSelectedFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
